--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,7 +6,7 @@
 # This describes the project directory structure and
 # throws errors when files are not present where expected.
 #
-- name: Loading DNA
+- name: Load DNA
   include_vars:
     file: "../../../dna/{{ item }}"
   with_items:
@@ -16,18 +16,24 @@
     msg: "{{ playbook }}"
     verbosity: 3
 
-- name: Loading playbook variables
+- name: Load playbook variables
   include_vars:
     file: "../../vars_files/playbooks/{{ item }}"
   with_items:
     - "{{ playbook }}.yml"
     - "{{ playbook }}_private.yml"
 
-- name: Loading DNA variables
+- name: Load Optional variables
   include_vars:
     file: "../../vars_files/{{ item }}"
   with_items:
     - "prefs/{{whoami}}.yml"
+  ignore: yes
+
+- name: Load DNA variables
+  include_vars:
+    file: "../../vars_files/{{ item }}"
+  with_items:
     - "private/{{provisioner}}.yml"
     - "provisioner/{{provisioner}}/{{distribution}}.yml"
     - "provisioner/{{provisioner}}.yml"
