--- a/meta/main.yml
+++ b/meta/main.yml
@@ -33,19 +33,11 @@ galaxy_info:
   # platforms is a list of platforms, and each platform has a name and a list of versions.
   #
   platforms:
-  - name: RHEL
+  - name: EL
     versions:
-    - 7.2
-    - 7.4
-  - name: CentOS
-    versions:
-    - 7
+    - all
 
-  galaxy_tags:
-  - boot
-  - import variables
-  - project structure
-  - project pattern
+  galaxy_tags: []
 
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
